Fixed Coordinate parser not always supporting sorting